<resources>
    <string name="app_name">Driver On Call</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_amount">&#x20B9;</string>
    <string name="onetrip">ONEWAY-TRIP</string>
    <string name="roundtrip">ROUND-TRIP</string>
    <string name="choosetrip">Choose Your Trip Type</string>
    <string name="choosedatetime">Choose Date &amp; Time </string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="hours">IN HOURS</string>
    <string name="days">IN DAYS</string>
    <string name="selecthoursdays">Select Trip In Hours Or Days</string>
    <string name="paytm">Paytm</string>
    <string name="mobikwik">mobikwik</string>
    <string name="cash">Cash</string>
<!--
debug
    <string name="razor_api">rzp_test_wQTaSU3pyP9wim</string>
-->
    <string name="razor_api">rzp_live_Efz6tuuYtHrixL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key2">AIzaSyARrFBZW7To3NFcPrL9VXjh-ZoHV7YDXaA</string>

<!--
    <string name="google_maps_key2">AIzaSyDDZFHec3q4yKJjeC_sZEqQPwFJK5g5gyc</string>
-->



</resources>
