<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8sdp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/choosedatetime"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/colorBlue"
        android:gravity="center"/>

    <devs.mulham.horizontalcalendar.HorizontalCalendarView
        android:layout_marginTop="@dimen/_8sdp"
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:textColorSelected="@color/colorPrimary"/>


    <EditText
        android:tag="0"
        android:focusable="false"
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:hint="@string/date"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_4sdp"
        android:layout_gravity="center"
        android:textSize="@dimen/_12sdp"
        android:background="@color/gray"
        android:textColor="@color/colorBlue"
        android:layout_margin="@dimen/_10sdp"/>


    <EditText
        android:focusable="auto"
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:hint="@string/time"
        android:imeOptions="actionDone"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_4sdp"
        android:layout_gravity="center"
        android:background="@color/gray"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/colorBlue"
        android:layout_margin="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/boarder"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@color/colorBlue"
            android:textColor="@color/white"
            android:text="@string/ok" />


    </LinearLayout>

</LinearLayout>